# pdcli

./: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
sources/: CMakeLists.txt
sources/libpdcli/: CMakeLists.txt
sources/libpdcli/include/pd/cli/: abstract_argument.hpp  abstract_clidget.hpp  abstract_option.hpp  abstract_style.hpp  argument.hpp  argument_list.hpp  basic_style.hpp  from_string.hpp  gnu_style.hpp  option.hpp  posix_style.hpp
sources/libpdcli/src/pd/cli/: basic_style.cpp  from_string.cpp  gnu_style.cpp  option.cpp  posix_style.cpp
sources/libpdcli/ut/: CMakeLists.txt  argument_tests.cpp  basic_style_tests.cpp  from_string_tests.cpp  gnu_style_tests.cpp  option_tests.cpp  posix_style_tests.cpp
